@@ -2,6 +2,7 @@
 
 % Copyright Notice
 %
+%    Copyright (C) 2015 CentraleSupelec
 %    Copyright (C) 2012, 2013 SUPELEC
 %
 %    Authors:   Julien Bect       <julien.bect@centralesupelec.fr>
@@ -27,15 +28,18 @@
 %    You should  have received a copy  of the GNU  General Public License
 %    along with STK.  If not, see <http://www.gnu.org/licenses/>.
 
-function stk_plot_shadedci (x, z)
+function h = stk_plot_shadedci (x, z)
 
 x = double (x);
 
 delta = 1.96 * sqrt (abs (z.var));
 h = area (x, [z.mean - delta, 2 * delta]);
-set (h(1), 'FaceColor', 'none');
-set (h(2), 'FaceColor', [0.8 0.8 0.8]);
-set (h, 'LineStyle', '-', 'LineWidth', 1, 'EdgeColor', 'none');
+
+% Remove the first area object (between 0 and z.mean - delta)
+delete (h(1));  h = h(2);
+
+c = [0.8 0.8 0.8];  % Light gray
+set (h, 'FaceColor', c, 'LineStyle', '-', 'LineWidth', 1, 'EdgeColor', c);
 
 % Raise current axis to the top layer, to prevent it
 % from being hidden by the grayed area
